# C-Kernel-Engine

./: .gitmessage  .mailmap  CONTRIBUTORS.md  LICENSING.md  Makefile  README.md  RELEASE_NOTES.md  pyproject.toml  requirements-v8.txt  requirements.txt
.githooks/: commit-msg  post-commit  pre-commit  pre-push
.github/: FUNDING.yml  pull_request_template.md
benchmarks/: bench_final_logits_q4k_q8k.py  bench_q4k_dispatch_matrix.c  bench_q4k_exact_prefill.c  bench_q4k_gateup_swiglu.c  bench_q4k_packed_u8.py  bench_q6k_prefill_tile.py  bench_q8_0_fp32_gemm.c  bench_qwen3vl_encoder_attention.c  bench_v8_decoder_matrix.py  bench_v8_qwen3vl_ocr.py  compare_ck_llama_v8.py  profile_v8_prefill_ops.py  qwen3vl_ocr_perf_pipeline.py  sweep_q4_q5_prefill_dispatch.py  sweep_q6k_prefill_dispatch.py
docs/: MODEL_COMPATIBILITY_ATLAS.md  QWEN35_CK_LLAMA_ITERATION_LOG.md  QWEN35_CK_LLAMA_PARITY_WORKLOG.md  WALL_CLOCK_PERFORMANCE_BASELINE_2026-06-30.md  qwen3vl-parity-investigation-2026-07-14.txt
include/: ck_parity_api.h  ck_speed_profiles.h  ck_threadpool.h  ckernel_audio.h  ckernel_engine.h  cpu_features.h
patches/: test-kernel-parity.cpp
scripts/: chat_contract.py  ck_chat.py  ck_run_v5.py  download_model_v6.py  gguf_tokenizer.py  nightly_runner.py  perf_stat_v8_prefill_compare.py  profile_v8_prefill_roofline.sh  run_cachegrind_tree.sh  run_llamacpp_rolling_compat.py  run_mega_fusion_test.sh  run_parity_smoketest.sh  setup-dev-env.sh  test_avx512_parity.py  test_isa_variants.sh  test_kernels_vs_llamacpp.py  validate_change_metadata.py  validate_submodule_pins.py
(+686 files in other folders)
