[project]
name = "c-kernel-engine"
version = "8.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "numpy",
  "torch",
  "safetensors",
  "requests",
  "tqdm",
  "huggingface-hub",
  "gguf",
  "tokenizers",
  "transformers",
  "jsonschema>=4.18",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
